# CyberClub_Tutorials

./: .gitignore  README.md  pyproject.toml
BasicNetworking/: README.md  main.py
tuto_proj/: main.py
tuto_proj/media/videos/main/1080p60/partial_movie_files/BasicNetworking/: partial_movie_file_list.txt
tuto_proj/media/videos/main/480p15/partial_movie_files/BasicNetworking/: partial_movie_file_list.txt
tuto_proj/slides/: BasicNetworking.json
